--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "notifications-doc-site",
+	"name": "VuePress-template",
 	"version": "1.0.0",
 	"scripts": {
 		"start": "vuepress dev",
